@startuml
'https://plantuml.com/class-diagram

interface Receiver {
{abstract} startReceiving()
{abstract} stopReceiving()
}

interface Runnable {
{abstract} run()
}

Receiver -up--|> Runnable
abstract class SerialPortReceiver implements Receiver {
{abstract} createRequest(int)
}
class EquipmentOperationReceiver extends SerialPortReceiver
class ElectricityReceiver extends SerialPortReceiver

class MainModel {
startReceiving()
stopReceiving()
}

class MainController {
}

interface DataStore {
{abstract} List<T> findAll()
{abstract} save(Map<Integer, byte[]>)
{abstract} add(Port)
{abstract} update(Port)
}

MainModel *--> Receiver
MainModel *--> DataStore
MainModel <--* MainController

@enduml